--- a/03-Recommend.Rmd
+++ b/03-Recommend.Rmd
@@ -1,4 +1,5 @@
-# Recommend resources {-}
+# 2 Recommend resources {-}
+<br>
  -   [Data Visualization with ggplot2 Cheat Sheet - RStudio](https://rstudio.com/wp-content/uploads/2015/03/ggplot2-cheatsheet.pdf)
 
  -   [ggplot2: elegant graphics for data analysist](https://ggplot2-book.org/index.html)
