--- a/06-Core.Rmd
+++ b/06-Core.Rmd
@@ -1,3 +1,23 @@
 # Graphics with ggplot2
 
+## basic ggplot2 plots
+
+### 
+
+
+####
 Here is a review of existing methods.
+
+
+
+
+
+## Saving graphs
+
+
+
+## Saving graphs
+
+
+
+## Sum up
