--- a/04-Recap.Rmd
+++ b/04-Recap.Rmd
@@ -1,3 +1,13 @@
-# Recap
+# Recap {-}
+<br><br>
+##
 
-We describe our methods in this chapter.
+
+
+
+
+
+
+##
+
+![CASA0005 assessment mark scheme](GIS-MarkScheme-2020.pdf) {width=100%,height=400}
