--- a/04-Recap.Rmd
+++ b/04-Recap.Rmd
@@ -1,13 +1,82 @@
-# Recap {-}
-<br><br>
-##
+# Recap 
+  
+## Basic requirment of a graph 
+<br>
+Graphs request to be **clear, precise and efficient**,below listed some requirement of graphs
+* Have a title or figure caption 
+* Label axes
+* Axis labels with units
+* Have a legend
+* legible font size
+
+**Tip**: When you are ready to begin creating your figures,it worthwhile to understand the manuscript requirement first.so let use have a look at the CASA0005 assessment mark scheme.
+
+   ![](GIS-MarkScheme-2020.pdf){width=100% height=400}
+   
+Meanwhile,different journal or publisher have different requirements in Figures.
+
+-  [SAGE Publishing manuscript Submission Guidelines](https://uk.sagepub.com/en-gb/eur/manuscript-submission-guidelines#Artwork)
+
+-  [Manuscript Submission Guidelines](https://www3.nd.edu/~pkamat/pdf/graphs.pdf)
+ 
+-  [Nature submission guidelines](https://www.nature.com/srep/author-instructions/submission-guidelines)
+ 
+-  [Wiley manuscript preparation guidelines](https://authorservices.wiley.com/asset/photos/electronic_artwork_guidelines.pdf)
+ 
+ 
+ 
+ 
+ # Readability
+ 
+
+ * Clear, concise, easy to read (https://www3.nd.edu/~pkamat/pdf/graphs.pdf)
+
+ ##add a picture at Artwork guidelines
+ 
 
 
 
+Graphs request to be **clear, precise and efficient**, below listed some guidance for graphs in academic writing.
+### Basic requirment of graphs 
+* Have a title or figure caption 
+* Label axes
+* Axis labels with units
+* Have a legend
+* legible font size
+
+### Basic requirment of graphs in academic wriring
 
 
+Avoid colors that are difficult to distinguish
 
 
-##
+Tip: When you are ready to begin creating your figures,it worth 
 
-![CASA0005 assessment mark scheme](GIS-MarkScheme-2020.pdf) {width=100%,height=400}
+A* Resolutionvoid colors that are difficult to distinguish
+
+
+<style>
+div.blue { background-color:#e6f0ff; border-radius: 5px; padding: 20px;}
+</style>
+<div class = "blue">
+
+ - Advanced your knowledge about ggplot2 in R  
+ - Know ten advanced customization  in ggplot
+ - Create a high resolution graph for your research
+ - Trouble-soluting by yourself
+ 
+[2] (https://journals.plos.org/plosbiology/article?id=10.1371/journal.pbio.1002128)  
+[1] ( http://www.sigmaplot.co.uk/splot/products/sigmaplot/productuses/prod-uses25.php)  
+[3] (https://datacarpentry.org/dc_zurich/R-ecology/05-visualisation-ggplot2.html )  
+[4] ( https://www.aje.com/dist/docs/Guide-Creating-Effective-Scientific-Figures-for-Publication.pdf)
+
+
+ *
+ *First, check out what your target journal 
+ *
+ *
+ *
+
+</div>
+
+#### bad example in GIS course assignemtn
