--- a/04-Recap.Rmd
+++ b/04-Recap.Rmd
@@ -1,6 +1,6 @@
 # Recap 
 <br>
-Graphs request to be **clear, precise and efficient**, below listed some requirement of graphs:
+Graphs need to be clear, precise and efficient, below listed some requirements of graphs:
 <style>
 div.blue { background-color:#e6f0ff; border-radius: 5px; padding: 20px;}
 </style>
@@ -10,14 +10,14 @@ div.blue { background-color:#e6f0ff; border-radius: 5px; padding: 20px;}
 * Axis labels with units
 * Have a legend
 * Legible font size
-* good resolution
+* Good resolution
 </div>
   
-**Tip**: When you are ready to begin creating your figures,it worthwhile to understand the manuscript requirement first.so let use have a look at the CASA0005 assessment mark scheme.
+**Tip**: When you are ready to create your figures,it worthwhile to understand the manuscript requirement first.Now let use have a look at the CASA0005 assessment mark scheme.
 
    ![](GIS-MarkScheme-2020.pdf){width=100% height=400}
    
-Meanwhile,different journal or publisher have different requirements in Figures.
+Meanwhile,different journals or publishers have different requirements for figures.
 
 -  [SAGE Publishing manuscript Submission Guidelines](https://uk.sagepub.com/en-gb/eur/manuscript-submission-guidelines#Artwork)
 
@@ -28,11 +28,12 @@ Meanwhile,different journal or publisher have different requirements in Figures.
 -  [Wiley manuscript preparation guidelines](https://authorservices.wiley.com/asset/photos/electronic_artwork_guidelines.pdf)
  
 
-Graphic in academic research is general expected to be clear, concise and easy to read. Now let's have a look at some examples in GIS course assignment last year.
+Graphic in academic research is generally expected to be clear, concise and easy to read. Now let’s have a look at some examples in GIS course assignment last year.
 
-
+<br>
 ![Example 1](e6.png){out.wide="100%"}
-![[Example 2](e2.png){out.wide="100%"}
+<br>
+![Example 2](e2.png){out.wide="100%"}
 ![Example 3](e3.png){out.wide="100%"}
 
 ![Example 4](e4.png){out.wide="100%"}
