--- a/07-Challenge.Rmd
+++ b/07-Challenge.Rmd
@@ -6,13 +6,14 @@ Let us move to the challenge part to exam your understanding of this seminar. Be
 ```{r}
 head(housedata2)
 ggplot(data=housedata2, aes(x= yearchi, y=priceper,group=region,color=region)) +geom_point(size=2)+
-  geom_line( size = 1)+
-  scale_colour_manual(values=c("#F8766D", "#D39200","#000000","#93AA00", "#00BA38" ,"#00C19F" ,"#00B9E3", "#619CFF" ,"#DB72FB", "#FF61C3"))+
+  geom_line(size = 1)+
+  scale_fill_manual(breaks=c("North East","North West","East Midlands","Yorkshire and The Humber","West Midlands","South West","East of England","South East","London"),
+                    values = c("#E41A1C", "#377EB8" ,"#4DAF4A", "#984EA3", "#FF7F00" ,"#FFFF33", "#A65628", "#F781BF" ,"#999999"))+
   theme_bw()+
   theme(axis.title = element_text(size=15), axis.text = element_text(size=13),strip.text = element_text(size=15),legend.text = element_text(size=13),legend.title = element_text(size=15))+
   ylab("House price per square metre")+
   guides(color=guide_legend("Location")) +
-  scale_y_continuous(labels = scales::comma,)+scale_x_continuous(breaks = c(2009,2010,2011,2012,2013,2014,2015,2016))
+  scale_y_continuous(labels = scales::comma,)+scale_x_continuous(breaks = c(2009,2011,2013,2015,2016))
 ```
 <br>
 ##Challenge 2
