--- a/03-Recommend.Rmd
+++ b/03-Recommend.Rmd
@@ -2,7 +2,7 @@
 <br>
 Data visualisation is the visual representation of patterns in data. An efficient data visulaistion makes data more understandable.
 
-## Resouces about ggplot2 packge
+## Resouces about ggplot2 package
  -   [Data Visualization with ggplot2 Cheat Sheet - RStudio](https://rstudio.com/wp-content/uploads/2015/03/ggplot2-cheatsheet.pdf)
 <br>
  -   [ggplot2: elegant graphics for data analysist](https://ggplot2-book.org/index.html)
